--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "bootswatch": "^5.3.3",
     "vue": "^3.4.22",
     "vue-router": "^4.0.13"
   },
